// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip component with component have to match default tooltip snapshot 1`] = `
<Component
  align="align"
  arrow="arrow"
  class="class"
  className="className"
  id="id"
  onClick={[Function]}
  on_click="on_click"
  position="position"
>
  <Tooltip
    align={null}
    arrow="center"
    class={null}
    className={null}
    component={
      <button
        id="button"
      >
        Button
      </button>
    }
    id={null}
    onClick={null}
    on_click={null}
    position="top"
  >
    <TooltipWithEvents
      align={null}
      arrow="center"
      attributes={
        Object {
          "children": "Text",
          "className": "dnb-tooltip dnb-core-style",
        }
      }
      class={null}
      className={null}
      component={
        <button
          id="button"
        >
          Button
        </button>
      }
      group={null}
      id={null}
      onClick={null}
      on_click={null}
      parent={
        <button
          id="button"
        >
          Button
        </button>
      }
      position="top"
    >
      <span
        className={null}
        key="parent-wrapper"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <button
          id="button"
        >
          Button
        </button>
      </span>
    </TooltipWithEvents>
  </Tooltip>
</Component>
`;

exports[`Tooltip component with target have to match default tooltip snapshot 1`] = `
<Component
  align="align"
  arrow="arrow"
  class="class"
  className="className"
  id="id"
  onClick={[Function]}
  on_click="on_click"
  position="position"
>
  <button
    id="button"
  >
    Button
  </button>
  <Tooltip
    align={null}
    arrow="center"
    class={null}
    className={null}
    id={null}
    onClick={null}
    on_click={null}
    position="top"
    target="#button"
  >
    <TooltipPortal
      active={false}
      align={null}
      arrow="center"
      attributes={
        Object {
          "children": "Text",
          "className": "dnb-tooltip dnb-core-style",
        }
      }
      class={null}
      className={null}
      group={null}
      hide_delay={500}
      id={null}
      onClick={null}
      on_click={null}
      parent="#button"
      position="top"
      target="#button"
    />
  </Tooltip>
</Component>
`;

exports[`Tooltip scss have to match default theme snapshot 1`] = `
"/*
* Tooltip theme
*
*/
/**
 * This file is only used to make themes independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
.dnb-tooltip {
  border-radius: 1rem;
  color: var(--color-white);
  background-color: var(--color-emerald-green);
  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.16); }
"
`;

exports[`Tooltip scss have to match snapshot 1`] = `
"/*
* DNB Tooltip
*
*/
/**
 * This file is only used to make components independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
 * Scopes
 *
 */
/*
 * Document Reset
 *
 */
.dnb-tooltip {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-default);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-tooltip *,
  .dnb-tooltip ::before,
  .dnb-tooltip ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-tooltip ::before,
  .dnb-tooltip ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
* Tooltip component
*
*/
.dnb-tooltip {
  pointer-events: none;
  position: absolute;
  z-index: 3100;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0 1rem;
  opacity: 0;
  transition: all 100ms ease-in-out, opacity 300ms ease-in-out; }
  .dnb-tooltip--active {
    opacity: 1; }
  .dnb-tooltip__content {
    padding: 0; }
  .dnb-tooltip__arrow {
    position: absolute;
    margin: 0;
    width: 1rem;
    height: 0.5rem;
    overflow: hidden; }
    .dnb-tooltip__arrow::before {
      content: '';
      position: absolute;
      bottom: 0;
      left: 0;
      width: 1rem;
      height: 1rem;
      transform: translateY(70%) rotate(45deg);
      border: 1px solid var(--color-black-border);
      background-color: var(--color-emerald-green); }
    .dnb-tooltip__arrow__position--bottom {
      top: -0.5rem; }
    .dnb-tooltip__arrow__position--top {
      bottom: -0.5rem;
      transform: rotate(180deg); }
    .dnb-tooltip__arrow__position--left {
      right: -0.75rem;
      margin-right: 2px;
      transform: rotate(90deg); }
    .dnb-tooltip__arrow__position--right {
      left: -0.75rem;
      margin-left: 2px;
      transform: rotate(270deg); }
    .dnb-tooltip__arrow__arrow--left {
      align-self: flex-start; }
    .dnb-tooltip__arrow__arrow--right {
      align-self: flex-end; }
"
`;
